# unified-runtime

./: CMakeLists.txt  README.md  TEST.txt  benchmark_results.md  data.json  ft.sh  sanitizer-ignorelist.txt  testfile.cpp
.github/: CODEOWNERS  dependabot.yml  intel-llvm-mirror-base-commit
cmake/: FetchLevelZero.cmake  FindLibunwind.cmake  helpers.cmake
examples/: CMakeLists.txt
examples/vector_addition/: CMakeLists.txt  cudaVecAddKernel.cu  vector_addition.cpp  vector_addition.h  vector_addition_buffer.cpp
include/: ur.py  ur_api.h  ur_api_funcs.def  ur_ddi.h  ur_print.h  ur_print.hpp
results/: 17118_BMG_v2_20250429_154811.json  17118_BMG_v2_20250429_161802.json  195ce30_BMG_L0v2_20250509_072551.json  195ce30_BMG_L0v2_20250509_075013.json  195ce30_BMG_L0v2_20250509_101434.json  195ce30_PVC_L0v2_20250509_081136.json  195ce30_PVC_L0v2_20250509_094330.json  195ce30_PVC_L0v2_20250509_101023.json  2522_BMG_L0v2_20250609_084001.json  2522_BMG_L0v2_20250609_101713.json  2522_BMG_L0v2_20250609_105841.json  2522_BMG_L0v2_20250609_134805.json  2522_PVC_L0v2_20250609_081231.json  2522_PVC_L0v2_20250609_085542.json  2522_PVC_L0v2_20250609_104204.json  2522_PVC_L0v2_20250609_111952.json  2522_PVC_L0v2_20250609_140804.json  (+175 more)
scripts/: YaML.md  run.py  (+10 more)
source/adapters/level_zero/: CMakeLists.txt  adapter.cpp  adapter.hpp  adapter_lib_init_linux.cpp  adapter_lib_init_windows.cpp  command_buffer.cpp  command_buffer.hpp  common.cpp  common.hpp  context.cpp  context.hpp  device.cpp  device.hpp  event.cpp  event.hpp  image.cpp  image.hpp  kernel.cpp  kernel.hpp  memory.cpp  memory.hpp  physical_mem.cpp  physical_mem.hpp  platform.cpp  platform.hpp  program.cpp  program.hpp  queue.cpp  queue.hpp  queue_api.cpp  queue_api.hpp  sampler.cpp  sampler.hpp  ur_interface_loader.cpp  ur_interface_loader.hpp  ur_level_zero.hpp  ur_level_zero_common.cpp  ur_level_zero_common.hpp  ur_level_zero_context.cpp  ur_level_zero_context.hpp  (+21 more)
source/adapters/level_zero/helpers/: kernel_helpers.cpp  kernel_helpers.hpp  memory_helpers.cpp  memory_helpers.hpp
source/adapters/level_zero/v2/: api.cpp  command_buffer.cpp  command_buffer.hpp  command_list_cache.cpp  command_list_cache.hpp  command_list_manager.cpp  command_list_manager.hpp  common.hpp  context.cpp  context.hpp  event.cpp  event.hpp  event_pool.cpp  event_pool.hpp  event_pool_cache.cpp  event_pool_cache.hpp  event_provider_counter.cpp  event_provider_counter.hpp  event_provider_normal.cpp  event_provider_normal.hpp  kernel.cpp  kernel.hpp  latency_tracker.hpp  memory.cpp  memory.hpp  queue_api.cpp  queue_api.hpp  queue_immediate_in_order.cpp  queue_immediate_in_order.hpp  usm.cpp  usm.hpp
source/adapters/libomptarget/: CMakeLists.txt  README.md  adapter.cpp  adapter.hpp  command_buffer.cpp  common.cpp  common.hpp  context.cpp  context.hpp  device.cpp  device.hpp  enqueue.cpp  event.cpp  event.hpp  image.cpp  kernel.cpp  kernel.hpp  memory.cpp  memory.hpp  platform.cpp  platform.hpp  program.cpp  program.hpp  queue.cpp  queue.hpp  sampler.cpp  ur_interface_loader.cpp  usm.cpp  usm.hpp  usm_p2p.cpp
source/common/: CMakeLists.txt  stype_map_helpers.def  uma_helpers.hpp  umf_helpers.cpp  umf_helpers.hpp  ur_params.hpp  ur_pool_handle.hpp  ur_pool_manager.hpp  ur_singleton.hpp  ur_util.cpp  ur_util.hpp  usm_pool_config.cpp  usm_pool_config.hpp
source/common/linux/: ur_lib_loader.cpp
source/common/logger/: ur_level.hpp  ur_logger.hpp  ur_logger_details.hpp  ur_sinks.hpp
source/common/uma_pools/: CMakeLists.txt  disjoint_pool.cpp  disjoint_pool.hpp  disjoint_pool_config.cpp  disjoint_pool_config.hpp  usm_allocator.cpp  usm_allocator.hpp  usm_allocator_config.cpp  usm_allocator_config.hpp  usm_pool.hpp
source/common/umf_pools/: CMakeLists.txt  disjoint_pool.cpp  disjoint_pool_config_parser.cpp  disjoint_pool_config_parser.hpp
source/common/unified_malloc_framework/: CMakeLists.txt
source/common/unified_malloc_framework/cmake/: helpers.cmake
source/common/unified_malloc_framework/include/umf/: base.h  memory_pool.h  memory_pool_ops.h  memory_provider.h  memory_provider_ops.h
source/common/unified_malloc_framework/src/: memory_pool.c  memory_provider.c  memory_provider.cpp  memory_tracker.cpp  memory_tracker.h  os_memory_provider.c  os_memory_provider.h  util.hpp
source/common/unified_malloc_framework/src/critnib/: critnib.c
source/common/unified_malloc_framework/src/utils/: utils_math.cpp  utils_math.h  utils_posix_concurrency.c  utils_windows_concurrency.cpp
source/common/unified_memory_allocation/include/uma/: base.h  memory_pool.h  memory_pool_ops.h  memory_provider.h  memory_provider_ops.h
source/common/unified_memory_allocation/src/: memory_pool.c  memory_provider.c  memory_tracker.cpp  memory_tracker.h
source/common/windows/: ur_lib_loader.cpp
source/layers/validation/: CMakeLists.txt  UrValidationLayerVersion.rc.in  ur_valddi.cpp  ur_validation_layer.cpp  ur_validation_layer.h
source/loader/device_selector/: CMakeLists.txt  backend.hpp  descriptor.hpp  device.hpp  filter.hpp  matcher.hpp
test/adapters/level_zero/: CMakeLists.txt  enqueueAlloc.cpp  enqueue_alloc.cpp  event_cache_tests.cpp  multi_device_event_cache_tests.cpp  urEventCreateWithNativeHandle.cpp  urKernelCreateWithNativeHandle.cpp  urProgramLink.cpp  zeCallMap.cpp
test/adapters/level_zero/v2/: CMakeLists.txt  command_list_cache_test.cpp  deferred_kernel.cpp  event_pool_test.cpp
test/conformance/exp_enqueue_native/: CMakeLists.txt  enqueue_native_cuda.cpp
test/loader/device_selector/: CMakeLists.txt  backend.cpp  common.hpp  device.cpp  filter.cpp  matcher.cpp
test/performance/: CMakeLists.txt  enqueue_kernel.cpp  state.cpp  state.hpp
test/performance/benchmarks/api_overhead/: eat_time.spv  submit_kernel.cpp
test/performance/common/: CMakeLists.txt  fixtures.hpp
test/performance/utility/: file.cpp  file.hpp  statistics.cpp  statistics.hpp  timer.hpp
test/unified_memory_allocation/uma_pools/: CMakeLists.txt  disjoint_pool.cpp  disjoint_pool_config.cpp  usm_pool.cpp
test/usm/: CMakeLists.txt  disjoint_pool_config.cpp  usmPoolManager.cpp
(+723 files in other folders)
